--- a/style.css
+++ b/style.css
@@ -3,3 +3,15 @@ body {
   height: 100%;
   margin: 0;
 }
+a{
+  padding: 10px 10px;
+  background-color: grey;
+}
+#featured-property{
+  width: 800px;
+
+}
+div{
+  float: left;
+  width: 25%;
+}
